updated to use grpc

--- a/module/modules/Calc.yaml
+++ b/module/modules/Calc.yaml
@@ -1,5 +1,5 @@
 name: Calc
 description: A template module showing basic functionality. This modules just opens calc.
-pipe: Ophanim-Calc
+key: Calc
 command: calc.exe
 enabled: true
