--- a/module/modules/Notepad.yaml
+++ b/module/modules/Notepad.yaml
@@ -1,5 +1,5 @@
 name: Notepad
 description: A template module showing basic functionality. This modules just opens notepad.
-pipe: Ophanim-Notepad
+key: Notepad
 command: notepad.exe
 enabled: true
