added a gRPC client example and set up ctrl C handler

--- a/module/modules/Calc.yaml
+++ b/module/modules/Calc.yaml
@@ -2,4 +2,4 @@ name: Calc
 description: A template module showing basic functionality. This modules just opens calc.
 key: Calc
 command: calc.exe
-enabled: true
+enabled: false
