--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-#
-module/modules/*.vs
+# ignore vscode dbs
+module/modules/*/.vs
+# ignore builds
+module/modules/*/builds/
